<resources>
    <string name="app_name">干货社区</string>
    <!--注册-->
    <string name="welcome_to_register">欢迎来到干货</string>
    <string name="register">注册</string>
    <string name="to_login">有账号？ 去登录 ></string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="user_name_error">用户名不能为空！</string>
    <string name="password_error">密码不能为空！</string>
    <string name="register_error">注册失败！</string>

    <!--登录-->
    <string name="welcome_to_login">登录干货社区</string>
    <string name="login">登录</string>
    <string name="goto_register">去注册></string>
    <string name="login_error">登录失败></string>

    <!-- 添加文章 -->
    <string name="article_title">文章标题</string>
    <string name="article_type">类型</string>
    <string name="article_content">添加文章内容</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>

    <!-- 评论 -->
    <string name="send_content">发送</string>
    <string name="comment">评论</string>
    <string name="comment_success">评论成功！</string>
    <string name="collect">收藏</string>
    <string name="read">阅读</string>
    <string name="say_your_thinks">说说你的想法...</string>

    <!-- 热门模块-->
    <string name="hot_article">热门文章</string>

    <!-- 作者详情 -->
    <string name="author_detail">作者详情</string>
    <string name="follow">关注</string>
    <string name="follower">关注者</string>
    <string name="followed">已关注</string>
    <string name="share_article">分享文章</string>
    <string name="collect_article">收藏文章</string>

    <!-- 我的 -->
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="deleted">已删除</string>
    <string name="finish_edit">完成</string>
    <string name="cancle_edit">取消编辑</string>
    <string name="my_follow">我的关注</string>
</resources>
