<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/holo_blue_light">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_register"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/goto_register_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goto_register"
                android:textSize="16sp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/username_login_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_username"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/password_login_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/login"
        android:background="@android:color/holo_blue_light"
        android:textSize="16sp"
        android:textColor="@android:color/white"></Button>
</LinearLayout>