<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/page_bg">

    <include layout="@layout/layout_article_details_header" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_bottom_bg"
        android:padding="10dp">
        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/author_details_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/author_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1234"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/author_details_avatar"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/author_details_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:textSize="18sp"
            android:textColor="@color/primary_green"
            android:drawableLeft="@drawable/ic_s_add"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/border_bg"
            android:padding="10dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom_bg"
        android:padding="15dp">

        <TextView
            android:id="@+id/author_details_user_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/author_details_avatar"/>

        <TextView
            android:id="@+id/author_details_user_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/author_details_user_follow"
            android:layout_below="@+id/author_details_avatar"
            android:layout_marginLeft="30dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/author_details_share_article_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/border_bottom_bg">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_article"
            />
        <TextView
            android:id="@+id/author_details_share_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/author_details_collect_article_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/border_bottom_bg">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collect_article"
            />
        <TextView
            android:id="@+id/author_details_collect_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:padding="5dp"/>
    </LinearLayout>
</LinearLayout>